--- a/package.json
+++ b/package.json
@@ -6,16 +6,26 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "formik": "^2.2.6",
+    "near-api-js": "^0.38.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
+    "build:contract": "node ./contract/build",
+    "dev:deploy:contract": "near dev-deploy --wasmFile ./contract/res/contract.wasm",
+    "prestart": "npm run build:contract && npm run dev:deploy:contract",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "ctest": "cd contract && cargo test --package status-message -- --nocapture"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "shelljs": "^0.8.4"
   }
 }
